--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@ button.next {
 
   <!-- ===== HERO / SLIDING BANNER ===== -->
   <section class="hero-banner" id="home-section">
-        <div class="hero-slide active" style="background-image: url('images/hero1.png');">
+        <div class="hero-slide active" style="background-image: url('hero1.png');">
       <div class="hero-content">
         <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
         <h1>Janasabha <br></h1>
@@ -2502,3 +2502,4 @@ function closeVideoModal() {
 
 </body>
 </html>
+
