--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@ button.next {
       </div>
     </div>
 
-    <div class="hero-slide" style="background-image: url('images/hero2.jpg');">
+    <div class="hero-slide" style="background-image: url('hero2.jpg');">
       <div class="hero-content">
         <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
          <h1>Janasabha  </h1>
@@ -1504,7 +1504,7 @@ button.next {
       </div>
     </div>
 
-    <div class="hero-slide" style="background-image: url('images/hero3.jpg');">
+    <div class="hero-slide" style="background-image: url('hero3.jpg');">
       <div class="hero-content">
         <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
          <h1>Janasabha </h1>
@@ -1519,7 +1519,7 @@ button.next {
       </div>
     </div>
 
-    <div class="hero-slide" style="background-image: url('images/hero4.jpg');">
+    <div class="hero-slide" style="background-image: url('hero4.jpg');">
       <div class="hero-content">
         <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
          <h1>Janasabha </h1>
@@ -2502,4 +2502,5 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
