--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,7 @@ button.next {
   <section class="hero-banner" id="home-section">
         <div class="hero-slide active" style="background-image: url('hero1.png');">
       <div class="hero-content">
-        <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
+        <img src="logo1.PNG" alt="Janasabha Logo" class="hero-logo">
         <h1>Janasabha <br></h1>
         <h2  >Community Development Forum</h2>
         <p  >Together we create stronger and harmonious India</p>
@@ -1674,19 +1674,19 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
 
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="images/image6.jpg" alt="Clean-up Drive">
+        <img src="image6.jpg" alt="Clean-up Drive">
         <div class="caption"> Flag Hosting</div>
       </div>
       <div class="gallery-item">
-        <img src="images/image5.jpg" alt="Health Camp">
+        <img src="image5.jpg" alt="Health Camp">
         <div class="caption">Mega Thiruvathira</div>
       </div>
       <div class="gallery-item">
-        <img src="images/image7.jpg" alt="Tree Plantation">
+        <img src="image7.jpg" alt="Tree Plantation">
         <div class="caption"> Residents</div>
       </div>
       <div class="gallery-item">
-        <img src="images/image8.jpg" alt="Cultural Event">
+        <img src="image8.jpg" alt="Cultural Event">
         <div class="caption">Inauguration</div>
       </div>
     </div>
@@ -2502,5 +2502,6 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
