--- a/page-mannjan.html
+++ b/page-mannjan.html
@@ -1543,7 +1543,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 1 -->
       <div class="modelunit-slide">
-        <img src="images/ayal-1.jpg" alt="Ayaljana 1" />
+        <img src="ayal-1.jpg" alt="Ayaljana 1" />
         <div class="caption-grid">
           <h3 class="vol-name">Adhithya</h3>
           <p class="vol-role">-------</p>
@@ -1552,7 +1552,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 2 -->
       <div class="modelunit-slide">
-        <img src="images/ayal-2.jpg" alt="Ayaljana 2" />
+        <img src="ayal-2.jpg" alt="Ayaljana 2" />
         <div class="caption-grid">
           <h3 class="vol-name">Vikas</h3>
           <p class="vol-role">---------</p>
@@ -1561,7 +1561,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 3 -->
       <div class="modelunit-slide">
-        <img src="images/ayal-3.jpg" alt="Ayaljana 3" />
+        <img src="ayal-3.jpg" alt="Ayaljana 3" />
         <div class="caption-grid">
           <h3 class="vol-name">Maithri</h3>
           <p class="vol-role">--------</p>
@@ -1570,7 +1570,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 4 -->
       <div class="modelunit-slide">
-        <img src="images/ayal-4.jpg" alt="Ayaljana 4" />
+        <img src="ayal-4.jpg" alt="Ayaljana 4" />
         <div class="caption-grid">
           <h3 class="vol-name">Adharsh</h3>
           <p class="vol-role">-------</p>
@@ -1579,7 +1579,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 5 -->
       <div class="modelunit-slide">
-        <img src="images/ayal-5.jpg" alt="Ayaljana 5" />
+        <img src="ayal-5.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Mathruka</h3>
           <p class="vol-role">-------</p>
@@ -1587,7 +1587,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="images/ayal-6.jpg" alt="Ayaljana 5" />
+        <img src="ayal-6.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Nanma</h3>
           <p class="vol-role">-------</p>
@@ -1595,7 +1595,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="images/ayal-7.jpg" alt="Ayaljana 5" />
+        <img src="ayal-7.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Aishwarya</h3>
           <p class="vol-role">-------</p>
@@ -1603,7 +1603,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="images/ayal-8.jpg" alt="Ayaljana 5" />
+        <img src="ayal-8.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Prathibha</h3>
           <p class="vol-role">-------</p>
@@ -1611,7 +1611,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="images/ayal-9.jpg" alt="Ayaljana 5" />
+        <img src="ayal-9.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Soubhagya</h3>
           <p class="vol-role">-------</p>
@@ -1619,7 +1619,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="images/ayal-10.jpg" alt="Ayaljana 5" />
+        <img src="ayal-10.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Sneha</h3>
           <p class="vol-role">-------</p>
@@ -1627,7 +1627,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="images/ayal-11.jpg" alt="Ayaljana 5" />
+        <img src="ayal-11.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Chathunnippara</h3>
           <p class="vol-role">-------</p>
@@ -1676,45 +1676,45 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
 
         <!-- Repeat this block for each slide -->
         <div class="activities-item">
-          <img src="images/activities1.jpg" alt="">
+          <img src="activities1.jpg" alt="">
           <div class="caption">Housing for Poor</div>
         </div>
 
         <div class="activities-item">
-          <img src="images/activities2.jpg" alt="">
+          <img src="activities2.jpg" alt="">
           <div class="caption">Cleaning Public Place</div>
         </div>
 
         <div class="activities-item">
-          <img src="images/activities3.jpg" alt="">
+          <img src="activities3.jpg" alt="">
           <div class="caption">Medical Camp</div>
         </div>
         <div class="activities-item">
-          <img src="images/activities4.jpg" alt="">
+          <img src="activities4.jpg" alt="">
           <div class="caption">Flood Relief</div>
         </div>
        <div class="activities-item">
-          <img src="images/activities10.jpg" alt="">
+          <img src="activities10.jpg" alt="">
           <div class="caption">Children's Day</div>
         </div>
         <div class="activities-item">
-          <img src="images/activities5.jpg" alt="">
+          <img src="activities5.jpg" alt="">
           <div class="caption">Cultural Fest</div>
         </div>
         <div class="activities-item">
-          <img src="images/activities6.jpg" alt="">
+          <img src="activities6.jpg" alt="">
           <div class="caption">Social Action</div>
         </div>
         <div class="activities-item">
-          <img src="images/activities7.jpg" alt="">
+          <img src="activities7.jpg" alt="">
           <div class="caption">LSG Cantidates Meet</div>
         </div>
         <div class="activities-item">
-          <img src="images/activities8.jpg" alt="">
+          <img src="activities8.jpg" alt="">
           <div class="caption">Balajanasabha</div>
         </div>
         <div class="activities-item">
-          <img src="images/activities9.jpg" alt="">
+          <img src="activities9.jpg" alt="">
           <div class="caption">Sports</div>
         </div>
          
@@ -1739,7 +1739,7 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
        does not support the audio element. <a class="audio-fallback" href="audio/Anthem.MP3" download>Download MP3</a> </audio> 
       </div> <div class="magazine-grid"> <!-- Magazine Card --> <div class="magazine-card"> 
         <div class="magazine-content"> <h3>Mannanam Voice</h3> <p>Community e-Magazine</p> 
-        </div> <img src="images/MagazineVijayamma.jpg" alt="Community Magazine" class="magazine-image" /> 
+        </div> <img src="MagazineVijayamma.jpg" alt="Community Magazine" class="magazine-image" /> 
         <!-- Open Button --> <div class="magazine-btn-wrapper"> 
           <a href="magazine.html" target="_blank" class="btn-open">Open</a> </div> </div> </div>
   
@@ -1760,19 +1760,19 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
 
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="images/image1.jpg" alt="Clean-up Drive">
+        <img src="image1.jpg" alt="Clean-up Drive">
         <div class="caption">Independence Day</div>
       </div>
       <div class="gallery-item">
-        <img src="images/image2.jpg" alt="Health Camp">
+        <img src="image2.jpg" alt="Health Camp">
         <div class="caption">Cultural Fest</div>
       </div>
       <div class="gallery-item">
-        <img src="images/image3.jpg" alt="Tree Plantation">
+        <img src="image3.jpg" alt="Tree Plantation">
         <div class="caption">Flood Relief</div>
       </div>
       <div class="gallery-item">
-        <img src="images/image4.jpg" alt="Cultural Event">
+        <img src="image4.jpg" alt="Cultural Event">
         <div class="caption">Onam</div>
       </div>
     </div>
@@ -2421,4 +2421,5 @@ function closeVideoModal() {
 
 
 </body>
+
 </html>
