--- a/page-mannjan.html
+++ b/page-mannjan.html
@@ -1543,7 +1543,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 1 -->
       <div class="modelunit-slide">
-        <img src="ayal-1.jpg" alt="Ayaljana 1" />
+        <img src="Ayal-1.jpg" alt="Ayaljana 1" />
         <div class="caption-grid">
           <h3 class="vol-name">Adhithya</h3>
           <p class="vol-role">-------</p>
@@ -1552,7 +1552,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 2 -->
       <div class="modelunit-slide">
-        <img src="ayal-2.jpg" alt="Ayaljana 2" />
+        <img src="Ayal-2.jpg" alt="Ayaljana 2" />
         <div class="caption-grid">
           <h3 class="vol-name">Vikas</h3>
           <p class="vol-role">---------</p>
@@ -2423,3 +2423,4 @@ function closeVideoModal() {
 </body>
 
 </html>
+
