--- a/page-mannjan.html
+++ b/page-mannjan.html
@@ -1561,7 +1561,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 3 -->
       <div class="modelunit-slide">
-        <img src="ayal-3.jpg" alt="Ayaljana 3" />
+        <img src="Ayal-3.jpg" alt="Ayaljana 3" />
         <div class="caption-grid">
           <h3 class="vol-name">Maithri</h3>
           <p class="vol-role">--------</p>
@@ -1570,7 +1570,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 4 -->
       <div class="modelunit-slide">
-        <img src="ayal-4.jpg" alt="Ayaljana 4" />
+        <img src="Ayal-4.jpg" alt="Ayaljana 4" />
         <div class="caption-grid">
           <h3 class="vol-name">Adharsh</h3>
           <p class="vol-role">-------</p>
@@ -1579,7 +1579,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
 
       <!-- Ayaljana 5 -->
       <div class="modelunit-slide">
-        <img src="ayal-5.jpg" alt="Ayaljana 5" />
+        <img src="Ayal-5.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Mathruka</h3>
           <p class="vol-role">-------</p>
@@ -1587,7 +1587,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="ayal-6.jpg" alt="Ayaljana 5" />
+        <img src="Ayal-6.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Nanma</h3>
           <p class="vol-role">-------</p>
@@ -1595,7 +1595,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="ayal-7.jpg" alt="Ayaljana 5" />
+        <img src="Ayal-7.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Aishwarya</h3>
           <p class="vol-role">-------</p>
@@ -1603,7 +1603,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="ayal-8.jpg" alt="Ayaljana 5" />
+        <img src="Ayal-8.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Prathibha</h3>
           <p class="vol-role">-------</p>
@@ -1611,7 +1611,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="ayal-9.jpg" alt="Ayaljana 5" />
+        <img src="Ayal-9.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Soubhagya</h3>
           <p class="vol-role">-------</p>
@@ -1619,7 +1619,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="ayal-10.jpg" alt="Ayaljana 5" />
+        <img src="Ayal-10.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Sneha</h3>
           <p class="vol-role">-------</p>
@@ -1627,7 +1627,7 @@ This was followed by a cultural evening performed by the residents of Mannanam.
       </div>
 
        <div class="modelunit-slide">
-        <img src="ayal-11.jpg" alt="Ayaljana 5" />
+        <img src="Ayal-11.jpg" alt="Ayaljana 5" />
         <div class="caption-grid">
           <h3 class="vol-name">Chathunnippara</h3>
           <p class="vol-role">-------</p>
@@ -1681,7 +1681,7 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
         </div>
 
         <div class="activities-item">
-          <img src="activities2.jpg" alt="">
+          <img src="Activities2.jpg" alt="">
           <div class="caption">Cleaning Public Place</div>
         </div>
 
@@ -2423,4 +2423,5 @@ function closeVideoModal() {
 </body>
 
 </html>
+
 
