--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,7 @@ button.next {
   <section class="hero-banner" id="home-section">
         <div class="hero-slide active" style="background-image: url('hero1.png');">
       <div class="hero-content">
-        <img src="logo1.PNG" alt="Janasabha Logo" class="hero-logo">
+        <img src="Logo1.PNG" alt="Janasabha Logo" class="hero-logo">
         <h1>Janasabha <br></h1>
         <h2  >Community Development Forum</h2>
         <p  >Together we create stronger and harmonious India</p>
@@ -2502,6 +2502,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
