--- a/index.html
+++ b/index.html
@@ -1491,7 +1491,7 @@ button.next {
 
     <div class="hero-slide" style="background-image: url('hero2.jpg');">
       <div class="hero-content">
-        <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
+        <img src="Logo1.PNG" alt="Janasabha Logo" class="hero-logo">
          <h1>Janasabha  </h1>
       
         <h2  class="typewriter" data-text="for Community Harmony and Integration">for Community Harmony and Integration </h2>
@@ -1506,7 +1506,7 @@ button.next {
 
     <div class="hero-slide" style="background-image: url('hero3.jpg');">
       <div class="hero-content">
-        <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
+        <img src="Logo1.PNG" alt="Janasabha Logo" class="hero-logo">
          <h1>Janasabha </h1>
       
         <h2 class="typewriter" data-text="for Community Talent Hunting"> for Community Talent Hunting </h2>
@@ -1521,7 +1521,7 @@ button.next {
 
     <div class="hero-slide" style="background-image: url('hero4.jpg');">
       <div class="hero-content">
-        <img src="images/logo1.PNG" alt="Janasabha Logo" class="hero-logo">
+        <img src="Logo1.PNG" alt="Janasabha Logo" class="hero-logo">
          <h1>Janasabha </h1>
          <h2  class="typewriter" data-text="for Sustainable National Development">for Sustainable  Development</h2>
         <p></p>
@@ -2502,6 +2502,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
