--- a/manual.html
+++ b/manual.html
@@ -489,16 +489,16 @@
 
   <!-- Thumbnails -->
   <div class="thumbnail-strip">
-    <img src="images/page1.JPG" class="thumbnail active" data-page="1">
-    <img src="images/page2.JPG" class="thumbnail" data-page="2">
-    <img src="images/page3.JPG" class="thumbnail" data-page="3">
-    <img src="images/page4.JPG" class="thumbnail" data-page="4">
-    <img src="images/page5.JPG" class="thumbnail" data-page="5">
-    <img src="images/page6.JPG" class="thumbnail" data-page="6">
-    <img src="images/page7.JPG" class="thumbnail" data-page="7">
-    <img src="images/page8.JPG" class="thumbnail" data-page="8">
-    <img src="images/page9.JPG" class="thumbnail" data-page="9">
-    <img src="images/page10.JPG" class="thumbnail" data-page="10">
+    <img src="page1.JPG" class="thumbnail active" data-page="1">
+    <img src="page2.JPG" class="thumbnail" data-page="2">
+    <img src="page3.JPG" class="thumbnail" data-page="3">
+    <img src="page4.JPG" class="thumbnail" data-page="4">
+    <img src="page5.JPG" class="thumbnail" data-page="5">
+    <img src="page6.JPG" class="thumbnail" data-page="6">
+    <img src="page7.JPG" class="thumbnail" data-page="7">
+    <img src="page8.JPG" class="thumbnail" data-page="8">
+    <img src="page9.JPG" class="thumbnail" data-page="9">
+    <img src="page10.JPG" class="thumbnail" data-page="10">
   </div>
 
 </div>
@@ -691,4 +691,5 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 
 
 </body>
+
 </html>
