--- a/manual.html
+++ b/manual.html
@@ -489,16 +489,16 @@
 
   <!-- Thumbnails -->
   <div class="thumbnail-strip">
-    <img src="page1.JPG" class="thumbnail active" data-page="1">
-    <img src="page2.JPG" class="thumbnail" data-page="2">
-    <img src="page3.JPG" class="thumbnail" data-page="3">
-    <img src="page4.JPG" class="thumbnail" data-page="4">
-    <img src="page5.JPG" class="thumbnail" data-page="5">
-    <img src="page6.JPG" class="thumbnail" data-page="6">
-    <img src="page7.JPG" class="thumbnail" data-page="7">
-    <img src="page8.JPG" class="thumbnail" data-page="8">
-    <img src="page9.JPG" class="thumbnail" data-page="9">
-    <img src="page10.JPG" class="thumbnail" data-page="10">
+    <img src="page1.jpg" class="thumbnail active" data-page="1">
+    <img src="page2.jpg" class="thumbnail" data-page="2">
+    <img src="page3.jpg" class="thumbnail" data-page="3">
+    <img src="page4.jpg" class="thumbnail" data-page="4">
+    <img src="page5.jpg" class="thumbnail" data-page="5">
+    <img src="page6.jpg" class="thumbnail" data-page="6">
+    <img src="page7.jpg" class="thumbnail" data-page="7">
+    <img src="page8.jpg" class="thumbnail" data-page="8">
+    <img src="page9.jpg" class="thumbnail" data-page="9">
+    <img src="page10.jpg" class="thumbnail" data-page="10">
   </div>
 
 </div>
@@ -693,3 +693,4 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
