--- a/manual.html
+++ b/manual.html
@@ -632,7 +632,7 @@ document.addEventListener("DOMContentLoaded", function () {
       let pageNumber = this.getAttribute("data-page");
 
       // update main image
-      mainPage.src = `images/page${pageNumber}.JPG`;
+      mainPage.src = `page${pageNumber}.jpg`;
     });
   });
 
@@ -693,4 +693,5 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
