--- a/manual.html
+++ b/manual.html
@@ -484,7 +484,7 @@
   
   <!-- Main Page Display -->
   <div class="main-page-wrapper">
-    <img id="mainPage" src="images/page1.JPG" class="main-page" alt="Manual Page">
+    <img id="mainPage" src="page1.jpg" class="main-page" alt="Manual Page">
   </div>
 
   <!-- Thumbnails -->
@@ -693,5 +693,6 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
