--- a/index.html
+++ b/index.html
@@ -1424,7 +1424,7 @@ button.next {
   <ul>
   <li><a href="index.html#home-section" class="active">Home</a></li>
   <li><a href="index.html#aboutus-section">About Us</a></li>
-  <li><a href="page-mannjan.html">Model Unit</a></li> 
+  <li><a href="#modelunit-section">Model Unit</a></li> 
   <li><a href="index.html#gallery-section">Gallery</a></li>
   <li><a href="index.html#testimony-section">Testimonies</a></li>
   <li><a href="index.html#Jointhemovement-section">Join the Movement</a></li>
@@ -1463,7 +1463,7 @@ button.next {
       <ul class="menu-list">
         <li><a href="index.html#home-section" class="active">Home</a></li>
   <li><a href="index.html#aboutus-section">About Us</a></li>
-  <li><a href="page-mannjan.html">Model Unit</a></li>
+  <li><a href="#modelunit-section">Model Unit</a></li>
   <li><a href="index.html#gallery-section">Gallery</a></li>
   <li><a href="index.html#testimony-section">Testimonies</a></li>
   <li><a href="index.html#Jointhemovement-section">Join the Movement</a></li> 
@@ -1483,7 +1483,7 @@ button.next {
         <p  >Together we create stronger and harmonious India</p>
         <div class="hero-buttons">
           <a  href="manual.html"   class="btn">Janasabha Manual</a>
-          <a href="#modelunit-section" class="btn btn-outline">Model Unit</a>
+          <a href="page-mannjan.html" class="btn btn-outline">Model Unit</a>
           <a href="#video" class="btn btn-outline">Join the Movement</a>
         </div>
       </div>
@@ -1498,7 +1498,7 @@ button.next {
         <p></p>
         <div class="hero-buttons">
           <a href="manual.html"  class="btn">Janasabha Manual</a>
-          <a href="#modelunit-section" class="btn btn-outline"> Model Unit</a>
+          <a href="page-mannjan.html" class="btn btn-outline"> Model Unit</a>
           <a href="#video" class="btn btn-outline">Join the Movement</a>
         </div>
       </div>
@@ -1513,7 +1513,7 @@ button.next {
         <p></p>
         <div class="hero-buttons">
           <a href="manual.html"  class="btn">Janasabha Manual</a>
-          <a href="#modelunit-section" class="btn btn-outline">Model Unit</a>
+          <a href="page-mannjan.html" class="btn btn-outline">Model Unit</a>
           <a href="#video" class="btn btn-outline">Join the Movement</a>
         </div>
       </div>
@@ -1527,7 +1527,7 @@ button.next {
         <p></p>
         <div class="hero-buttons">
          <a href="manual.html"  class="btn">Janasabha Manual</a>
-          <a href="#modelunit-section" class="btn btn-outline"> Model Unit</a>
+          <a href="page-mannjan.html" class="btn btn-outline"> Model Unit</a>
           <a href="#video" class="btn btn-outline">Join the Movement</a>
         </div>
       </div>
