--- a/index.html
+++ b/index.html
@@ -1703,7 +1703,7 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
 <!-- ====== TESTIMONY SECTION ====== -->
 <section class="card-slider-section" id="testimony-section">
   <h2 class="slider-title"> Testimonies </h2>
-  <p class="slider-subtitle">Hear the highlights of speeches about Janasabha </p>
+  <p class="slider-subtitle">Hear the highlights of speeches about Janasabha on 14th January 2018 </p>
 
 
   
@@ -2502,6 +2502,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
