--- a/page-mannjan.html
+++ b/page-mannjan.html
@@ -1790,7 +1790,7 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
 <!-- ====== TESTIMONY SECTION ====== -->
 <section class="card-slider-section" id="testimony-section">
   <h2 class="slider-title"> Testimonies </h2>
-  <p class="slider-subtitle">Hear the highlights of speeches in the inaugural session </p>
+  <p class="slider-subtitle">Hear the highlights of speeches in the inaugural session on 14th January 2018</p>
 
   <div class="slider-container">
     <button class="prev">&#10094;</button>
@@ -2423,5 +2423,6 @@ function closeVideoModal() {
 </body>
 
 </html>
+
 
 
