--- a/manual.html
+++ b/manual.html
@@ -525,7 +525,7 @@
     <!-- MOTTO -->
     <div class="footer-section motto">
       <h3>Our Motto</h3>
-      <p>“Unity, Peace, and Development”</p>
+      <p>“Love, Unity, and Development”</p>
     </div>
   </div>
 
@@ -676,6 +676,7 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
 
