--- a/magazine.html
+++ b/magazine.html
@@ -612,7 +612,7 @@ margin-top:5px;"> August 2025</p>
     <!-- MOTTO -->
     <div class="footer-section motto">
       <h3>Our Motto</h3>
-      <p>“Unity, Peace, and Development”</p>
+      <p>“Love, Unity, and Development”</p>
     </div>
   </div>
 
@@ -796,3 +796,4 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
