--- a/page-mannjan.html
+++ b/page-mannjan.html
@@ -1778,8 +1778,8 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
     </div>
 
     <div class="gallery-buttons">
-      <a href="https://mannanamjanasabha.blogspot.com/p/activi.html" class="btn">View All Photos</a>
-      <a href="https://www.youtube.com/@mannanamjanasabha8641/videos" class="btn btn-outline">Watch Videos</a>
+      <a href="#gallery-section" class="btn">View All Photos</a>
+      <a href="#gallery-section" class="btn btn-outline">Watch Videos</a>
     </div>
   </div>
 </section>
@@ -1881,7 +1881,7 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
 
     <div class="more-btn-box">
   <a 
-    href=" " 
+    href="#testimony-section " 
     target="_blank" 
     class="more-btn"
   >
@@ -2423,6 +2423,7 @@ function closeVideoModal() {
 </body>
 
 </html>
+
 
 
 
