--- a/index.html
+++ b/index.html
@@ -1692,8 +1692,8 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
     </div>
 
     <div class="gallery-buttons">
-      <a href="https://mannanamjanasabha.blogspot.com/p/activi.html" class="btn">View All Photos</a>
-      <a href="https://www.youtube.com/@mannanamjanasabha8641/videos" class="btn btn-outline">Watch Videos</a>
+      <a href="#gallery-section" class="btn">View All Photos</a>
+      <a href="#gallery-section" class="btn btn-outline">Watch Videos</a>
     </div>
   </div>
 </section>
@@ -1798,7 +1798,7 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
 
     <div class="more-btn-box">
   <a 
-    href="" 
+    href="#testimony-section" 
     target="_blank" 
     class="more-btn"
   >
@@ -2502,6 +2502,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
