--- a/index.html
+++ b/index.html
@@ -1733,7 +1733,7 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
     <div class="play-icon">▶</div>
   </div>
   <div class="caption-grid">
-    <h3 class="vol-name">Rev.Fr. Dr. James Mullassery CMI</h3>
+    <h3 class="vol-name">Rev. Dr. James Mullassery CMI</h3>
     <p class="vol-role">Principal KEEMS</p>
   </div>
 </div>
@@ -2502,6 +2502,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
