--- a/index.html
+++ b/index.html
@@ -1823,7 +1823,8 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
 •	Integrity and neutrality
 •	Organizing skills
 •	Team spirit and initiative
-•	Free from prejudices or bias
+•	Free from prejudices 
+•	Patriotism 
 
     </p>
 
@@ -2502,6 +2503,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
