--- a/index.html
+++ b/index.html
@@ -1428,6 +1428,7 @@ button.next {
   <li><a href="index.html#gallery-section">Gallery</a></li>
   <li><a href="index.html#testimony-section">Testimonies</a></li>
   <li><a href="index.html#Jointhemovement-section">Join the Movement</a></li>
+    <li><a href="news.html">News</a></li>
   <li><a href="index.html#contact-section">Contact Us</a></li>
 </ul>
 
@@ -1467,6 +1468,7 @@ button.next {
   <li><a href="index.html#gallery-section">Gallery</a></li>
   <li><a href="index.html#testimony-section">Testimonies</a></li>
   <li><a href="index.html#Jointhemovement-section">Join the Movement</a></li> 
+         <li><a href="news.html">News</a></li>
   <li><a href="index.html#contact-section">Contact Us</a></li>
       </ul>
     </div>
@@ -2506,6 +2508,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
