--- a/index.html
+++ b/index.html
@@ -1897,6 +1897,8 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
   <li><a href="index.html#testimony-section">Testimonies</a></li>
   <li><a href="index.html#Jointhemovement-section">Join the Movement</a></li>
   <li><a href="index.html#contact-section">Contact Us</a></li>
+
+       <li> <a href="login.html">Admin Login</a></li>
       </ul>
     </div>
 
@@ -2508,6 +2510,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
